spacing issue resolved

--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ html{
 }
 body{
     background-color: #0B001A;
-    font-family: Montserrat;
-    padding: 15px;
+    font-family: Montserrat ,system-ui, sans-serif;
+    padding: 20px;
 }
-li,ul {
+li,ul,h1,h2,h3,h4,h5,h6,p {
     all: unset; 
     display: list-item; 
     list-style: none; 
@@ -42,28 +42,36 @@ li a span:hover, li a span:focus {
     cursor: pointer;
 }
 section,article, footer{
-    border-radius: 40px;
+    border-radius: 20px;
     margin-top: 40px;
 }
 
 header, footer {
     background-color: #1E0044;
-    border-radius: 40px;
-    padding: 20px;
+    border-radius: 20px;
     
 }
-
 nav{
+    padding: 20px 40px;
+    
+}
+.nav-content{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
 }
 
 ul{
     display: flex;
     gap: 24px;
+    
 }
+li{
+padding: 12px;
+}
+
 nav span{
     color:#E9DEFF;
     color: #E9DEFF;
@@ -87,6 +95,13 @@ text-transform: uppercase;
   border-radius: 1.75rem;
   box-shadow: 0 0 10px 5px #A22DF71A;
   cursor: pointer;
+}
+.header-text-content{
+    padding: 40px 40px 40px 40px;
+}
+
+.header-text{
+    margin: 70px 0px 60px 0px;
 }
 
 h1{
@@ -120,6 +135,7 @@ letter-spacing: -0.04em;
 text-align: left;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
+margin-top: 24px;
 
 }
 .watermark-container{
@@ -142,33 +158,43 @@ color: #E9DEFF;
 .cards-container{
     display: flex;
     gap: 24px;
+    margin-top: 40px;
     
 }
-.card h2,
- .card p,
- .card span
+.card-content h2,
+ .card-content p,
+ .tag
   {
     color: #E9DEFF;
 }
-.card{
+.card-content{
     background: -webkit-linear-gradient(#8338EC, #B923FF);
     border-radius: 20px;
-    padding: 20px;
+    padding: 36px;
+    display:flex;
+    flex-direction: column;
+    gap: 97px;
 }
 
-.card h2{
+.card-content h2{
     font-size: 32px;
     font-weight: 400;
 }
 
-.card p{
+.card-content p{
 font-size: 14px;
 font-weight: 400;
 line-height: 22.4px;
 text-decoration-skip-ink: none;
 
 }
-.card span{
+.tag-container{
+    padding-top: 16px;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+.tag{
     padding: 5.9px 11.8px;
     border-radius: 19.17px;
     border: 1px solid white;
@@ -179,14 +205,21 @@ text-decoration-skip-ink: none;
     background-position: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 40px;
+    padding: 40px 40px 43.5px 40px;
     border-radius: 40px;
     justify-content: space-between;
-    margin: 40px 0px 40px 0px;
+    margin: 60px 0px 40px 0px;
 
 }
 .case-study-text{
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    gap: 230px;
+}
+.case-study-heading{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 .case-study .bold-text{
 font-size: 14px;
@@ -208,10 +241,15 @@ text-align: left;
 color: #0B001A;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
-margin: 20px 0px 20px 0px;
 
 }
-.case-study .case-study-heading span {
+.case-study-heading .tag-container{
+    padding-top: 0px;
+}
+.case-study-heading .tag{
+    color: #0B001A;
+}
+.case-study .tag {
     padding: 5.9px 11.8px;
     border-radius: 19.17px;
     border: 1px solid #0B001A ;
@@ -219,7 +257,7 @@ margin: 20px 0px 20px 0px;
 .text-button-container{
     align-self:self-end ;
 }
-.case-study p{
+.text-button-container p{
 font-size: 14px;
 font-weight: 400;
 line-height: 22.4px;
@@ -240,6 +278,7 @@ padding-right: 100px;
   border: 1px solid transparent;
   border-radius: 1.75rem;
   box-shadow: 0 0 10px 5px #A22DF71A;
+  margin-top: 32px;
 
 }
 .case-study span{
@@ -247,13 +286,14 @@ font-size: 14px;
 font-weight: 500;
 
 }
-.trailhive{
-    background-image: url(./images/trail-hire-image.png);
-}
 .c-s-t{
 position: relative;
 }
-.trailhive .bold-text,.trailhive .head-text,.trailhive span,.trailhive p {
+.trailhive{
+    background-image: url(./images/trail-hire-image.png);
+}
+
+.trailhive .bold-text,.trailhive .head-text,.trailhive .tag,.trailhive span ,.trailhive p {
     color: #E9DEFF;
 }
 
@@ -266,13 +306,14 @@ background-image: linear-gradient(90deg, #0B001A, #0B001A),
 }
 .absolute-image{
     position: absolute;
-    right: 43.5%;
+    right: 45.5%;
     top: 10%;
 }
 .award-container{
     background-color: #E9DEFF;
 display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.7fr 1.3fr;
+    gap: 205px;
     padding: 60px 40px;
 }
 
@@ -287,10 +328,12 @@ margin: 0px;
 .award-container a{
     display: flex;
     justify-content: space-between;
+    margin: 20px 0px;
 }
 .short-texts{
     display: flex;
     flex-direction: column;
+    
 }
 
 .short-text-1 {
@@ -309,9 +352,22 @@ hr{
     border: 0;
     border-top: 1px solid #0B001A;
 }
+.award-container svg{
+    padding-top: 10px;
+}
+footer{
+    padding: 40px;
+}
+footer nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 0px 60px 0px;
+}
  .footer-text{
     display: grid;
    justify-items: center;
+   gap: 40px;
+   margin: 70px 0px 60px 0px;
 }
 
  .footer-text h5{
